cluster/apps/networking-system/ingresses/base/kube-prometheus-stack/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prom.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          namespace: monitoring-system
  tls:
    secretName: "${SECRET_DOMAIN_0//./-}-prod-tls"
